--- a/Vie/Resources/HTML/fr.lproj/about.html
+++ b/Vie/Resources/HTML/fr.lproj/about.html
@@ -44,5 +44,8 @@
     <h2>Why this app?</h2>
     <p>I built this app as a mean to sharpen my iOS development skills. I chose the Game of Life because I find the idea and the infinite possibilities fascinating, especially given the simplicity of the rules.</p>
 
+    <h2>Open Source</h2>
+    <p>The code of this app can be found on <a href="https://bitbucket.org/fabienwarniez/vie">Bitbucket</a>. Pull requests welcome!</p>
+
 </body>
 </html>
