Finished French translation.

--- a/Vie/Resources/HTML/en.lproj/about.html
+++ b/Vie/Resources/HTML/en.lproj/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>What is Vie?</h1>
-    <p>Vie (<em>life</em> in French) is my take on Conway's Game of Life. The app allows players to create randomized Game of Life boards, as well as pick from over a thousand of patterns and run them on their device.</p>
+    <p>Vie (<em>life</em> in French) is my take on Conway's Game of Life. The app allows players to create randomized Game of Life boards, as well as pick from almost 1000 patterns and run them on their device.</p>
 
     <h1>The "game"</h1>
     <p>The Game of Life is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. A player interacts with the Game of Life by creating an initial configuration and observing how it evolves.</p>
